--- a/SvampeAtlas/Base.lproj/Main.storyboard
+++ b/SvampeAtlas/Base.lproj/Main.storyboard
@@ -287,13 +287,13 @@
                                                                             <rect key="frame" x="0.0" y="38" width="205" height="38"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2v-gP-iDJ">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="59.5" height="38"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="43" height="38"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kGf-ZL-5I5">
-                                                                                    <rect key="frame" x="59.5" y="0.0" width="145.5" height="38"/>
+                                                                                    <rect key="frame" x="43" y="0.0" width="162" height="38"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
@@ -361,6 +361,102 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="792.79999999999995" y="33.733133433283363"/>
+        </scene>
+        <!--Details View Controller-->
+        <scene sceneID="CGv-Zc-Lz8">
+            <objects>
+                <viewController storyboardIdentifier="detailsVC" id="4Be-uK-R79" customClass="DetailsViewController" customModule="SvampeAtlas" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BD1-Cq-iq3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O7q-ae-aVF" customClass="MushroomDetailsScrollView" customModule="SvampeAtlas" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="250" width="375" height="417"/>
+                            </scrollView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WmE-cN-zC0" customClass="ImagesCollectionView" customModule="SvampeAtlas" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="H6w-Q5-hEs"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="SrE-Hx-nfc">
+                                    <size key="itemSize" width="376" height="237"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="Zdq-Z4-03h" customClass="ImageCell" customModule="SvampeAtlas" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="6.5" width="376" height="237"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="376" height="237"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N08-0H-Dqj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="376" height="237"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="bottomRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UqM-OH-s7T">
+                                                    <rect key="frame" x="12" y="205" width="352" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="lQ9-p9-0dr"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottomMargin" secondItem="UqM-OH-s7T" secondAttribute="bottom" constant="4" id="2cj-nj-JOd"/>
+                                            <constraint firstItem="N08-0H-Dqj" firstAttribute="top" secondItem="Zdq-Z4-03h" secondAttribute="top" id="5Op-iP-djq"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="UqM-OH-s7T" secondAttribute="trailing" constant="4" id="Mlb-qm-vQS"/>
+                                            <constraint firstItem="N08-0H-Dqj" firstAttribute="leading" secondItem="Zdq-Z4-03h" secondAttribute="leading" id="bBB-ej-Q7Y"/>
+                                            <constraint firstAttribute="bottom" secondItem="N08-0H-Dqj" secondAttribute="bottom" id="c3Z-5b-et3"/>
+                                            <constraint firstAttribute="trailing" secondItem="N08-0H-Dqj" secondAttribute="trailing" id="e1S-7n-mTm"/>
+                                            <constraint firstItem="UqM-OH-s7T" firstAttribute="leading" secondItem="Zdq-Z4-03h" secondAttribute="leadingMargin" constant="4" id="pkm-MS-pt8"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="authorLabel" destination="UqM-OH-s7T" id="dWm-5C-p1O"/>
+                                            <outlet property="image" destination="N08-0H-Dqj" id="xux-e2-m41"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="heightConstraint" destination="H6w-Q5-hEs" id="5Gi-GR-8Q2"/>
+                                </connections>
+                            </collectionView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="6Qs-zm-3Qn" customClass="ImagesPageControl" customModule="SvampeAtlas" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="220" width="375" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="guJ-Oj-tg5"/>
+                                </constraints>
+                            </pageControl>
+                        </subviews>
+                        <color key="backgroundColor" red="0.42352390290000003" green="0.73939204219999999" blue="0.39600116010000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="O7q-ae-aVF" firstAttribute="leading" secondItem="lLz-yh-3jT" secondAttribute="leading" id="3ce-KV-OU0"/>
+                            <constraint firstItem="6Qs-zm-3Qn" firstAttribute="leading" secondItem="WmE-cN-zC0" secondAttribute="leading" id="EB2-Gp-rUE"/>
+                            <constraint firstItem="O7q-ae-aVF" firstAttribute="trailing" secondItem="lLz-yh-3jT" secondAttribute="trailing" id="EOD-dr-sWD"/>
+                            <constraint firstItem="WmE-cN-zC0" firstAttribute="trailing" secondItem="lLz-yh-3jT" secondAttribute="trailing" id="Fd4-4C-JXg"/>
+                            <constraint firstItem="WmE-cN-zC0" firstAttribute="leading" secondItem="lLz-yh-3jT" secondAttribute="leading" id="IkR-Sz-pwH"/>
+                            <constraint firstItem="WmE-cN-zC0" firstAttribute="top" secondItem="BD1-Cq-iq3" secondAttribute="top" id="KHn-ih-rrC"/>
+                            <constraint firstItem="O7q-ae-aVF" firstAttribute="top" secondItem="WmE-cN-zC0" secondAttribute="bottom" id="Qs0-Vm-zgj"/>
+                            <constraint firstItem="lLz-yh-3jT" firstAttribute="bottom" secondItem="O7q-ae-aVF" secondAttribute="bottom" id="YnK-7h-7k3"/>
+                            <constraint firstItem="6Qs-zm-3Qn" firstAttribute="bottom" secondItem="WmE-cN-zC0" secondAttribute="bottom" id="nrG-RS-Z8m"/>
+                            <constraint firstItem="6Qs-zm-3Qn" firstAttribute="trailing" secondItem="WmE-cN-zC0" secondAttribute="trailing" id="zGx-8q-FjL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lLz-yh-3jT"/>
+                    </view>
+                    <connections>
+                        <outlet property="imagesCollectionView" destination="WmE-cN-zC0" id="tLh-2Z-FD0"/>
+                        <outlet property="pageControl" destination="6Qs-zm-3Qn" id="hIW-5d-iLd"/>
+                        <outlet property="scrollView" destination="O7q-ae-aVF" id="sq8-1w-E2h"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zfr-p0-LDJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1680.8" y="33.733133433283363"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uTc-N9-R8g">
