--- a/SvampeAtlas/Base.lproj/Main.storyboard
+++ b/SvampeAtlas/Base.lproj/Main.storyboard
@@ -190,7 +190,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoSmall" translatesAutoresizingMaskIntoConstraints="NO" id="2IV-Cw-pGg">
-                                    <rect key="frame" x="48.000000000000007" y="48" width="91.666666666666686" height="2"/>
+                                    <rect key="frame" x="47.999999999999986" y="48" width="166.66666666666663" height="2"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -210,7 +210,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fuR-58-F9C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1350" y="1491"/>
+            <point key="canvasLocation" x="-1258" y="1528"/>
         </scene>
         <!--MapVC-->
         <scene sceneID="dVk-rx-qov">
@@ -554,7 +554,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="Zdq-Z4-03h" customClass="ImageCell" customModule="SvampeAtlas" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="16" width="376" height="298"/>
+                                        <rect key="frame" x="0.0" y="-6" width="376" height="298"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="376" height="298"/>
@@ -643,23 +643,14 @@
                                     <constraint firstAttribute="height" constant="30" id="guJ-Oj-tg5"/>
                                 </constraints>
                             </pageControl>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TM0-6j-vgS">
-                                <rect key="frame" x="16" y="60" width="12" height="22"/>
-                                <state key="normal" image="backButton"/>
-                                <connections>
-                                    <action selector="backButtonPressedWithSender:" destination="4Be-uK-R79" eventType="touchUpInside" id="maE-O0-1bO"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.42352390290000003" green="0.73939204219999999" blue="0.39600116010000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="TM0-6j-vgS" firstAttribute="leading" secondItem="lLz-yh-3jT" secondAttribute="leading" constant="16" id="0Lj-vh-YGJ"/>
                             <constraint firstAttribute="bottom" secondItem="wgy-bH-uRr" secondAttribute="bottom" id="BU1-IY-erI"/>
                             <constraint firstItem="6Qs-zm-3Qn" firstAttribute="leading" secondItem="WmE-cN-zC0" secondAttribute="leading" id="EB2-Gp-rUE"/>
                             <constraint firstItem="WmE-cN-zC0" firstAttribute="trailing" secondItem="lLz-yh-3jT" secondAttribute="trailing" id="Fd4-4C-JXg"/>
                             <constraint firstItem="WmE-cN-zC0" firstAttribute="leading" secondItem="lLz-yh-3jT" secondAttribute="leading" id="IkR-Sz-pwH"/>
                             <constraint firstItem="WmE-cN-zC0" firstAttribute="top" secondItem="BD1-Cq-iq3" secondAttribute="top" id="KHn-ih-rrC"/>
-                            <constraint firstItem="TM0-6j-vgS" firstAttribute="top" secondItem="lLz-yh-3jT" secondAttribute="top" constant="16" id="Rqb-U1-PXS"/>
                             <constraint firstItem="wgy-bH-uRr" firstAttribute="top" secondItem="WmE-cN-zC0" secondAttribute="bottom" constant="-16" id="UgM-5s-WiG"/>
                             <constraint firstItem="wgy-bH-uRr" firstAttribute="leading" secondItem="lLz-yh-3jT" secondAttribute="leading" id="fjW-IJ-kfP"/>
                             <constraint firstItem="6Qs-zm-3Qn" firstAttribute="bottom" secondItem="WmE-cN-zC0" secondAttribute="bottom" constant="-16" id="nrG-RS-Z8m"/>
@@ -668,6 +659,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lLz-yh-3jT"/>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="imagesCollectionView" destination="WmE-cN-zC0" id="tLh-2Z-FD0"/>
                         <outlet property="pageControl" destination="6Qs-zm-3Qn" id="hIW-5d-iLd"/>
@@ -757,8 +749,8 @@
         <scene sceneID="BSE-Bp-bzM">
             <objects>
                 <navigationController storyboardIdentifier="MainVC" automaticallyAdjustsScrollViewInsets="NO" id="eUC-yX-ecN" sceneMemberID="viewController">
-                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sUu-9E-TNN">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -797,6 +789,5 @@
         <image name="IMG_15270" width="2560" height="1600"/>
         <image name="LogoSmall" width="97" height="111"/>
         <image name="Menu" width="18" height="8"/>
-        <image name="backButton" width="12" height="22"/>
     </resources>
 </document>
