--- a/SvampeAtlas/Base.lproj/Main.storyboard
+++ b/SvampeAtlas/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -540,71 +539,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WmE-cN-zC0" customClass="ImagesCollectionView" customModule="SvampeAtlas" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="330"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="330" id="H6w-Q5-hEs"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="SrE-Hx-nfc">
-                                    <size key="itemSize" width="376" height="298"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="Zdq-Z4-03h" customClass="ImageCell" customModule="SvampeAtlas" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="-6" width="376" height="298"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="376" height="298"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N08-0H-Dqj">
-                                                    <rect key="frame" x="0.0" y="0.0" width="376" height="298"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="bottomRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UqM-OH-s7T">
-                                                    <rect key="frame" x="12" y="266" width="352" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="lQ9-p9-0dr"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstAttribute="bottomMargin" secondItem="UqM-OH-s7T" secondAttribute="bottom" constant="4" id="2cj-nj-JOd"/>
-                                            <constraint firstItem="N08-0H-Dqj" firstAttribute="top" secondItem="Zdq-Z4-03h" secondAttribute="top" id="5Op-iP-djq"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="UqM-OH-s7T" secondAttribute="trailing" constant="4" id="Mlb-qm-vQS"/>
-                                            <constraint firstItem="N08-0H-Dqj" firstAttribute="leading" secondItem="Zdq-Z4-03h" secondAttribute="leading" id="bBB-ej-Q7Y"/>
-                                            <constraint firstAttribute="bottom" secondItem="N08-0H-Dqj" secondAttribute="bottom" id="c3Z-5b-et3"/>
-                                            <constraint firstAttribute="trailing" secondItem="N08-0H-Dqj" secondAttribute="trailing" id="e1S-7n-mTm"/>
-                                            <constraint firstItem="UqM-OH-s7T" firstAttribute="leading" secondItem="Zdq-Z4-03h" secondAttribute="leadingMargin" constant="4" id="pkm-MS-pt8"/>
-                                        </constraints>
-                                        <size key="customSize" width="376" height="298"/>
-                                        <connections>
-                                            <outlet property="authorLabel" destination="UqM-OH-s7T" id="dWm-5C-p1O"/>
-                                            <outlet property="image" destination="N08-0H-Dqj" id="xux-e2-m41"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="heightConstraint" destination="H6w-Q5-hEs" id="5Gi-GR-8Q2"/>
-                                </connections>
-                            </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wgy-bH-uRr">
-                                <rect key="frame" x="0.0" y="314" width="375" height="498"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <subviews>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O7q-ae-aVF" customClass="MushroomDetailsScrollView" customModule="SvampeAtlas" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="498"/>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="O7q-ae-aVF" customClass="MushroomDetailsScrollView" customModule="SvampeAtlas" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q2W-0q-Snz">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="498"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qaK-ST-p2I">
-                                                        <rect key="frame" x="8" y="16" width="359" height="466"/>
+                                                        <rect key="frame" x="8" y="16" width="359" height="780"/>
                                                     </stackView>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -621,7 +566,7 @@
                                             <constraint firstItem="Q2W-0q-Snz" firstAttribute="leading" secondItem="O7q-ae-aVF" secondAttribute="leading" id="Zxc-fc-cMy"/>
                                             <constraint firstItem="Q2W-0q-Snz" firstAttribute="height" secondItem="O7q-ae-aVF" secondAttribute="height" priority="250" id="bQn-0O-O82"/>
                                             <constraint firstAttribute="trailing" secondItem="Q2W-0q-Snz" secondAttribute="trailing" id="mZj-sa-e6d"/>
-                                            <constraint firstItem="Q2W-0q-Snz" firstAttribute="top" secondItem="O7q-ae-aVF" secondAttribute="top" id="uGd-CU-EPP"/>
+                                            <constraint firstItem="Q2W-0q-Snz" firstAttribute="top" secondItem="O7q-ae-aVF" secondAttribute="top" id="x2f-qa-RVB"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="contentStackView" destination="qaK-ST-p2I" id="7Hr-Bs-l6e"/>
@@ -637,7 +582,30 @@
                                     <constraint firstAttribute="trailing" secondItem="O7q-ae-aVF" secondAttribute="trailing" id="wRW-XZ-qvi"/>
                                 </constraints>
                             </view>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="6Qs-zm-3Qn" customClass="ImagesPageControl" customModule="SvampeAtlas" customModuleProvider="target">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ogZ-IP-L6M" customClass="ImagesCollectionView" customModule="SvampeAtlas" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" placeholder="YES" id="rlQ-aR-8I6"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Gyi-7A-U8I">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="CTD-gV-fxc">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="6Qs-zm-3Qn" customClass="ImagesPageControl" customModule="SvampeAtlas" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="284" width="375" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="guJ-Oj-tg5"/>
@@ -646,22 +614,19 @@
                         </subviews>
                         <color key="backgroundColor" red="0.42352390290000003" green="0.73939204219999999" blue="0.39600116010000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="wgy-bH-uRr" firstAttribute="top" secondItem="BD1-Cq-iq3" secondAttribute="top" id="9fb-ax-AhX"/>
                             <constraint firstAttribute="bottom" secondItem="wgy-bH-uRr" secondAttribute="bottom" id="BU1-IY-erI"/>
-                            <constraint firstItem="6Qs-zm-3Qn" firstAttribute="leading" secondItem="WmE-cN-zC0" secondAttribute="leading" id="EB2-Gp-rUE"/>
-                            <constraint firstItem="WmE-cN-zC0" firstAttribute="trailing" secondItem="lLz-yh-3jT" secondAttribute="trailing" id="Fd4-4C-JXg"/>
-                            <constraint firstItem="WmE-cN-zC0" firstAttribute="leading" secondItem="lLz-yh-3jT" secondAttribute="leading" id="IkR-Sz-pwH"/>
-                            <constraint firstItem="WmE-cN-zC0" firstAttribute="top" secondItem="BD1-Cq-iq3" secondAttribute="top" id="KHn-ih-rrC"/>
-                            <constraint firstItem="wgy-bH-uRr" firstAttribute="top" secondItem="WmE-cN-zC0" secondAttribute="bottom" constant="-16" id="UgM-5s-WiG"/>
+                            <constraint firstItem="ogZ-IP-L6M" firstAttribute="leading" secondItem="lLz-yh-3jT" secondAttribute="leading" id="FGo-oC-7js"/>
                             <constraint firstItem="wgy-bH-uRr" firstAttribute="leading" secondItem="lLz-yh-3jT" secondAttribute="leading" id="fjW-IJ-kfP"/>
-                            <constraint firstItem="6Qs-zm-3Qn" firstAttribute="bottom" secondItem="WmE-cN-zC0" secondAttribute="bottom" constant="-16" id="nrG-RS-Z8m"/>
+                            <constraint firstItem="ogZ-IP-L6M" firstAttribute="top" secondItem="BD1-Cq-iq3" secondAttribute="top" id="ovJ-0R-mDU"/>
                             <constraint firstItem="wgy-bH-uRr" firstAttribute="trailing" secondItem="lLz-yh-3jT" secondAttribute="trailing" id="pV3-1z-hnL"/>
-                            <constraint firstItem="6Qs-zm-3Qn" firstAttribute="trailing" secondItem="WmE-cN-zC0" secondAttribute="trailing" id="zGx-8q-FjL"/>
+                            <constraint firstItem="lLz-yh-3jT" firstAttribute="trailing" secondItem="ogZ-IP-L6M" secondAttribute="trailing" id="pvh-93-I82"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lLz-yh-3jT"/>
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
-                        <outlet property="imagesCollectionView" destination="WmE-cN-zC0" id="tLh-2Z-FD0"/>
+                        <outlet property="imageCollectionView" destination="ogZ-IP-L6M" id="LPl-L5-ceY"/>
                         <outlet property="pageControl" destination="6Qs-zm-3Qn" id="hIW-5d-iLd"/>
                         <outlet property="scrollView" destination="O7q-ae-aVF" id="sq8-1w-E2h"/>
                         <outlet property="scrollViewContainerView" destination="wgy-bH-uRr" id="ZIT-Hm-HzD"/>
@@ -669,7 +634,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zfr-p0-LDJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1903" y="33"/>
+            <point key="canvasLocation" x="1901.5999999999999" y="32.512315270935964"/>
         </scene>
         <!--PhotoVC View Controller-->
         <scene sceneID="Iel-kt-owJ">
